--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,12 @@
 	text-align:center;
 }
 
+#listOfSelections{
+	width:80%;
+	margin:0 auto;
+	margin-top:1em;
+}
+
 @media screen and (max-width: 420px) {
 
 	.distortionRow1, .distortionRow2{
